fixed extra space after closing

--- a/public/index.css
+++ b/public/index.css
@@ -17,6 +17,7 @@ a {
 #contentwrap {
     z-index: 9999;
     opacity: 1;
+    margin-top: 6vw;
 }
 
 button {
@@ -74,7 +75,6 @@ button:focus {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20vw;
 }
 
 #welcome div {
@@ -365,10 +365,8 @@ button:focus {
     font-family: 'Text Me One', sans-serif;
     font-size: 8vw;
     text-align: center;
-    position: absolute;
-    top: 20px;
-    left: 32%;
-    border: 0;
+    margin: 0;
+    margin-top: 4vw;
 }
 
 .hvr-float-shadow {
